# eq-service

./: .gitignore  Cargo.toml  Dockerfile  README.md  example.env  justfile
blob-tool/: Cargo.toml  README.md
blob-tool/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: eqservice.proto
common/src/: error.rs  lib.rs  utils.rs
infra/: SETUP_SUMMARY.md  prometheus.yml  start-monitoring.sh
infra/alertmanager/: alertmanager.yml
infra/grafana/datasources/: datasource.yml
infra/prometheus/: alert_rules.yml
infra/receiver/: Dockerfile
monitoring/: README.md  docker-compose.yml  fix-dashboard.sh  monitoring-tools.sh  prepare-config.sh  test-config.sh
monitoring/grafana/dashboards/: eq-service-dashboard.json
monitoring/prometheus/: prometheus.yml  prometheus.yml.template
program-keccak-inclusion/: Cargo.toml
program-keccak-inclusion/src/: main.rs
program-payy-inclusion/: README.md
program-payy-inclusion/src/: main.rs
runner-keccak-inclusion/: Cargo.toml  README.md  proof_input3.json  sample_groth16_proof.json
runner-keccak-inclusion/src/: main.rs
sdk/: Cargo.toml
sdk/examples/: client.rs
sdk/src/: lib.rs  main.rs  types.rs
service/: Cargo.toml  build.rs
service/src/: main.rs
service/src/internal/: grpc.rs  inclusion.rs  job.rs  prom_metrics.rs  util.rs
zksync-interface/: Cargo.toml
zksync-interface/src/: main.rs
