[package]
name = "blob-tool"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-rpc = {workspace = true}
celestia-types = {workspace = true}
tokio = {workspace = true}
hex = {workspace = true}
eq-common = {path = "../common"}
serde_json = {workspace = true}
clap = { version = "4.5", features = ["derive"] }
